@@ -1,1 +1,14 @@
 # Java_Spark
+
+Тестовый проект по **Spark фреймворк**
+
+Реализация нескольких тасков на базе **RDD** и **DataFrame**
+
+---
+
+Для запуска из под IDE (IDEA, etc) на Java версии выше 8, прописать ключи в *VM options:*
+```
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.util=ALL-UNNAMED
+--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+```
